--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,37 @@
-Email:<input type="text" [(ngModel)]="emailUsuario" /> :
-<hr />
-Senha <input type="password" [(ngModel)]="senhaUsuario" />
-<hr />
-<button (click)="criarUsuario()">Criar nova Conta</button>
-<h1>{{ mensagem }}</h1>
+<mat-toolbar>
+  <span>My Application</span>
+</mat-toolbar>
+
+<form class="example-form">
+  <mat-form-field class="example-full-width">
+    <mat-label>Email:</mat-label>
+    <input
+      type="email"
+      matInput
+      [formControl]="emailFormControl"
+      placeholder="Ex. aluno@iffar.edu.br"
+    />
+
+    @if (emailFormControl.hasError('email') &&
+    !emailFormControl.hasError('required')) {
+    <mat-error>Endereço de e-email inválido</mat-error>
+    } @if (emailFormControl.hasError('required')) {
+    <mat-error>Email is <strong>Campo obrigatório</strong></mat-error>
+    }
+  </mat-form-field>
+  <mat-form-field class="example-full-width">
+    <mat-label>Senha:</mat-label>
+    <input type="password" matInput [formControl]="senhaFormControl" />
+
+    @if (senhaFormControl.hasError('min')) {
+    <mat-error>A senha deve ter 6 caracteres</mat-error>
+    } @if (senhaFormControl.hasError('required')) {
+    <mat-error><strong>Campo obrigatório</strong></mat-error>
+    }
+  </mat-form-field>
+  <button (click)="autenticar()" mat-fab extended>
+    <mat-icon>login</mat-icon>
+    Disabled
+  </button>
+</form>
+{{ mensgem }}
