--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -22,5 +22,11 @@
         Entrar
       </button>
     </form>
+    <div class="bottom">
+      <a href="/novaconta" mat-button>
+        <mat-icon>add</mat-icon>
+        Nova conta</a
+      >
+    </div>
   </div>
 </div>
