--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -8,8 +8,8 @@
 .formulario {
   background-color: #eee;
   width: 50%;
-  padding: 1em;
-
+  padding: 1.5em;
+  border-radius: 10px;
   form {
     display: flex;
     flex-direction: column;
@@ -17,4 +17,8 @@
   @media (max-width: 600px) {
     width: 90%;
   }
+}
+.bottom {
+  padding: 1em;
+  text-align: right;
 }
