codigos feitos em aula

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<ol>
+  <li *ngFor="let aluno of alunos | async">
+    {{ aluno.nome }} - {{ aluno.idade }}
+    {{ aluno.sobrenome }}
+  </li>
+</ol>
