--- a/src/app/pages/aluno/aluno.component.html
+++ b/src/app/pages/aluno/aluno.component.html
@@ -2,5 +2,5 @@
   <app-input label="nome" [control]="form.controls['nome']" />
   <app-input label="Sobrenome" [control]="form.controls['sobreNome']" />
   <app-input label="idade" [control]="form.controls['idade']" />
-  <app-button label="gravar" />
+  <app-button [loading]="alunoService.loading" label="gravar" (click)="salvar()" />
 </form>
