--- a/src/app/components/app-button/app-button.component.html
+++ b/src/app/components/app-button/app-button.component.html
@@ -1,6 +1,6 @@
 <button
   mat-flat-button
-  class="mat-accent"
+  class="mat-primary"
   [ngClass]="{ fullSize: expanded }"
   [disabled]="loading"
   (click)="do_action()"
