--- a/src/app/pages/aluno/aluno.component.html
+++ b/src/app/pages/aluno/aluno.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form">
-  <app-input label="nome" [control]="form.controls['nome']" />
-  <app-input label="Sobrenome" [control]="form.controls['sobreNome']" />
-  <app-input label="idade" [control]="form.controls['idade']" />
-  <app-button [loading]="alunoService.loading" label="gravar" (click)="salvar()" />
+  <app-input label="NOME" [control]="form.controls['nome']" />
+  <app-input label="GÊNERO" [control]="form.controls['sobrenome']" />
+  <app-input type="number" label="DURAÇÃO (Segundos)" [control]="form.controls['idade']" />
+  <app-button [loading]="alunoService.loading" label="GRAVAR" (click)="salvar()" />
 </form>
